Fix versions, link, z-index.

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -121,6 +121,7 @@ nav
   color #eee
   position fixed
   width 100%
+  z-index 100
   .container
     position relative
   a
